--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Edu+SA+Beginner&family=Mochiy+Pop+One&family=Roboto+Mono:wght@300&display=swap');
-
 body{
-    background-color: #1d1d1d;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
     min-height: 100vh;
+    box-sizing: border-box;
+}
+.navbar{
+    background-color: whitesmoke;
+    display: flex;
+    height: 50px;
+    width: 100%;
 }
 
-p{
-    color: whitesmoke;
+.nav-menu{
+    background-color: grey;
+    flex-grow: 1;
 }
 
-.about{
-    margin-left: 1.5em;
-    display: grid;
-    grid-template-rows: auto auto;
-}
-
-.img-container{
+.nav-menu-ul{
     margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: rgba(224, 17, 17, 0.274);
+    width: 40%;
+    /*height: 100px; */
+    list-style-type: none;
 }
 
-.img-profile{
-    height: 100%;
-    border-radius: 30%;
-
-}
-
-.txt-presentation::first-letter{
-    font-weight: 900;
-    font-size:2em;
-    text-shadow: -4px 1px 5px purple;
+.nav-item{
     
 }
 
-.presentation{
-    font-family: 'Cinzel', serif;
-    font-weight: bold;
-    font-size: 2em;
+.baseline{
+    background-color: black;
+    width: 100%;
+    height: 5px;
+    margin-top: 22px;
+    margin-bottom: 22px;
 }
 
-.description{
-
-    font-family: 'Edu SA Beginner', cursive;
-    font-size: 1.3em;
-    justify-content: space-evenly;
-    align-items: center;
+.footer{
+    background-color: brown;
+    text-align: center;
+    margin-top: auto;
     width: 100%;
+    height: 60px;
 }
