animacion de botones y hover sidebar resuelta

--- a/src/Navbar/sass/menu.scss
+++ b/src/Navbar/sass/menu.scss
@@ -17,11 +17,14 @@
             .item{
                 margin: 10px auto 15px 0;
                 margin-left: 0;
-                border-top-right-radius: 0%;
                 height: 40px;
                 width: 40px;
-                background-color: #373A40;
-                transition: all .5s ease-out;
+                color: black;
+                opacity: .5;
+                // background-color: /* #373A40 */ #8a9597;
+                background-image: linear-gradient(to bottom right, #8a9597, rgba(44, 62, 80, 0.8));   
+
+                transition: font-size font-weight height width .5s ease-out;
                 position: relative;
 
                 
