--- a/src/Home/index.scss
+++ b/src/Home/index.scss
@@ -13,7 +13,7 @@
             font-size: 2.7rem;
             text-transform: uppercase;
             text-align: center;
-            text-shadow: 0px 0px 3px black;
+            text-shadow: 0px 0px 20px rgba(245, 245, 245, 0.3);
             position: relative;
 
             .left-in{
