--- a/src/Navbar/sass/navbar.scss
+++ b/src/Navbar/sass/navbar.scss
@@ -6,6 +6,7 @@
     right: 0;
     padding: 0;
     background-color: map-get($colors, sidebar );
+    overflow: hidden;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -14,9 +15,11 @@
 
     
     .networks-container{
+        opacity: 0;
         width: 100%;
         height: 10%;
         color: white;
+        transition: opacity .7s ease;
         *{
             width: 40%;
             height: 40%;
