--- a/src/Navbar/sass/onHover.scss
+++ b/src/Navbar/sass/onHover.scss
@@ -1,13 +1,18 @@
 .navbar:hover{
     width: 8%;
+    box-shadow: inset -2px 0 15px rgba(255,255,255, .1), -2px 0 15px rgba(255,255,255, .1);
 
+    .networks-container{
+        opacity: 1;
+    }
 
     ul{
 
         .item{
+            opacity: 1;
             margin: 25px auto 15px 0;
-            overflow: hidden;
-            font-size: 0px;            
+            font-size: 0px;   
+            text-transform: uppercase;    
 
             div{
                 position: absolute;
@@ -18,7 +23,7 @@
                 width: 5px;
                 background-color: #373A40;
                 border: .2px solid black;
-                box-shadow: inset 0 0 2px black, .5px .5px 3px black;
+                box-shadow: inset 0 0 2px black, .3px .3px 2px white;
             }
         }
 
@@ -70,8 +75,6 @@
 
 @keyframes nav-hover {
     25%{
-        border-top-right-radius: 30%;
-        color: black;
         font-size: 100%;
         font-weight: 600;
         
@@ -79,16 +82,13 @@
         
     }
     40%{
-        border-top-right-radius: 25%;
-        color: black;
         font-size: 100%;
         font-weight: 600;
 
 
     }
     50%{
-        border-top-right-radius: 20%;
-        color: black;
+
         font-size: 100%;
         font-weight: 600;
         
@@ -96,31 +96,27 @@
         width: 100px;
     }
     75%{
-        border-top-right-radius: 15%;
-        color: black;
         font-size: 100%;
         font-weight: 600;
         
 
         // height: 28px;
     }
+    80%{
+        border-top-right-radius: 5%;
+
+    }
     90%{
         border-top-right-radius: 10%;
-        color: black;
         font-size: 100%;
         font-weight: 600;
-        
-
-        // height: 30px;
     }
    
     100%{
-        border-top-right-radius: 10%;
-        color: black;
+        border-top-right-radius: 25%;
         font-size: 100%;
         font-weight: 600;
-        
-
+        background-image: linear-gradient(to bottom right, #8a9597 50%, rgba(44, 62, 80, 0.8));   
         height: 40px;
         width: 100px;
 
@@ -136,7 +132,6 @@
     }
     25%{
         border-top-right-radius: 30%;
-        color: black;
         font-size: 100%;
         font-weight: 600;
         
@@ -145,7 +140,6 @@
     }
     40%{
         border-top-right-radius: 25%;
-        color: black;
         font-size: 100%;
         font-weight: 600;
         
@@ -155,7 +149,6 @@
     }
     50%{
         border-top-right-radius: 20%;
-        color: black;
         font-size: 100%;
         font-weight: 600;
         
@@ -164,7 +157,6 @@
     }
     75%{
         border-top-right-radius: 15%;
-        color: black;
         font-size: 100%;
         font-weight: 600;
         
@@ -174,7 +166,6 @@
     }
     90%{
         border-top-right-radius: 10%;
-        color: black;
         font-size: 100%;
         font-weight: 600;
         
@@ -185,7 +176,6 @@
     100%{
         border-top-right-radius: 0%;
 
-        color: black;
         font-size: 100%;
         font-weight: 600;
         
