--- a/src/About/index.scss
+++ b/src/About/index.scss
@@ -1,5 +1,5 @@
 @import "../sass/variables";
-.about{
+#about{
     background-color: map-get($colors, background );
     
     color: map-get($colors, secondary );
@@ -12,7 +12,7 @@
 }
 
 @media (max-width: 1300px){
-    .about{
+    #about{
         color: map-get($colors, secondary );
         height: 100vh;
         width: 100%;
@@ -36,7 +36,7 @@
 }
 
 @media (max-width: 630px){
-    .about{
+    #about{
         .title{
             text-align: center;
             font-size: 1.9rem;
@@ -45,5 +45,15 @@
 
 }
 
+
+@media (max-width: 270px){
+    #about{
+        .description{
+            text-align: center;
+            font-size: 1rem;
+        }
+    }
+
+}
 
 
