--- a/src/Contact/index.scss
+++ b/src/Contact/index.scss
@@ -1,7 +1,7 @@
 @import "../sass/variables";
 
 
-.form{
+#contact{
     background-color: map-get($colors, background);
     border: 1px solid red;
     form{
