--- a/src/Home/index.scss
+++ b/src/Home/index.scss
@@ -1,8 +1,6 @@
 @import "../sass/variables";
 
-
-
-.home{
+#home{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -10,7 +8,7 @@
         .title{
             // border:1px solid green;
             margin: auto 0;
-            font-size: 2.7rem;
+            font-size: 2.9rem;
             text-transform: uppercase;
             text-align: center;
             text-shadow: 0px 0px 20px rgba(245, 245, 245, 0.3);
@@ -39,23 +37,14 @@
 
 @keyframes left-in{
     from{
-        margin-left: -100%;
+        margin-left: -75%;
     }
 }
 
 @keyframes right-in{
     from{
-        margin-right: -100%;
+        margin-right: -75%;
     }
-}
-
-
-@media (max-width: 1300px){
-
-    .title{
-        font-size: 220%;
-    }
-
 }
 
 @media (max-width: 630px){
@@ -63,6 +52,17 @@
         text-align: center;
         font-size: 1.9rem;
 
+    }
+
+}
+
+@media (max-width: 290px){
+    #home{
+        .title{
+            text-align: center;
+            font-size: 1.7rem;
+    
+        }
     }
 
 }
