--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -1,6 +1,7 @@
 @import "variables";
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Josefin+Sans:ital@1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rajdhani&display=swap');
 
+html{scroll-behavior: smooth;}
 *{
     margin: 0;
     padding: 0;
@@ -25,6 +26,7 @@ button{
 @media (max-width: 1300px){
 
   .container{
+    scroll-margin-top: 7vh;
     width: 100%;
   }
 
