--- a/src/Navbar/sass/onHover.scss
+++ b/src/Navbar/sass/onHover.scss
@@ -77,7 +77,18 @@
     25%{
         font-size: 100%;
         font-weight: 600;
-        
+        background-image: linear-gradient(
+  135deg,
+  hsl(189deg 6% 57%) 0%,
+  hsl(199deg 7% 47%) 13%,
+  hsl(207deg 13% 36%) 25%,
+  hsl(209deg 18% 31%) 37%,
+  hsl(202deg 8% 44%) 50%,
+  hsl(193deg 6% 54%) 63%,
+  hsl(196deg 6% 51%) 75%,
+  hsl(205deg 10% 40%) 87%,
+  hsl(210deg 29% 24%) 100%
+);
 
         
     }
@@ -94,6 +105,19 @@
         
 
         width: 100px;
+        background-image: linear-gradient(
+                135deg,
+                hsl(189deg 6% 57%) 0%,
+                hsl(199deg 7% 47%) 2%,
+                hsl(207deg 13% 36%) 7%,
+                hsl(209deg 18% 31%) 22%,
+                hsl(202deg 8% 44%) 55%,
+                hsl(193deg 6% 54%) 75%,
+                hsl(196deg 6% 51%) 86%,
+                hsl(205deg 10% 40%) 94%,
+                hsl(210deg 29% 24%) 100%
+                );
+        
     }
     75%{
         font-size: 100%;
@@ -116,7 +140,31 @@
         border-top-right-radius: 25%;
         font-size: 100%;
         font-weight: 600;
-        background-image: linear-gradient(to bottom right, #8a9597 50%, rgba(44, 62, 80, 0.8));   
+        // background-image: linear-gradient(to bottom right, #8a9597 50%, rgba(44, 62, 80, 0.8));   
+        background-image: linear-gradient(
+            135deg,
+            hsl(189deg 6% 57%) 0%,
+            hsl(199deg 7% 47%) 15%,
+            hsl(207deg 13% 36%) 32%,
+            hsl(209deg 18% 31%) 49%,
+            hsl(202deg 8% 44%) 65%,
+            hsl(193deg 6% 54%) 77%,
+            hsl(196deg 6% 51%) 87%,
+            hsl(205deg 10% 40%) 95%,
+            hsl(210deg 29% 24%) 100%
+          );
+//         background-image: linear-gradient(
+//   135deg,
+//   hsl(189deg 6% 57%) 1%,
+//   hsl(199deg 7% 47%) 44%,
+//   hsl(207deg 13% 36%) 50%,
+//   hsl(209deg 18% 31%) 51%,
+//   hsl(202deg 8% 44%) 50%,
+//   hsl(193deg 6% 54%) 49%,
+//   hsl(196deg 6% 51%) 50%,
+//   hsl(205deg 10% 40%) 56%,
+//   hsl(210deg 29% 24%) 99%
+// );
         height: 40px;
         width: 100px;
 
