--- a/src/Proyects/index.scss
+++ b/src/Proyects/index.scss
@@ -1,8 +1,8 @@
 @import "../sass/variables";
 
 #proyects{
-    padding: 40px;
-
+    padding: 30px;
+    // border: 1px solid green;
     background-color: map-get($colors , secondary-background );
     display: flex;
     flex-direction: column;
@@ -18,25 +18,44 @@
 
     }
 
-    ul{
-        border: 1px solid red;
-        height: 550px;
-        width: 750px;
+    div.list{
+        // border: 1px solid red;
+        height: 700px;
+        width: 1300px;
         display: flex;
-        flex-wrap: wrap;
-        li{
-            background-color: blue;
-            height: 50%;
-            width: 50%;
-            
-            .proyect{
-                height: 100%;
-                width: 100%;
-            }
+
+        div.proyect{
+            margin: auto;
+            height: 70%;
+            width: 28%;
+            border-radius: 2px;
+            display: flex;
+            flex-direction: column;           
 
             img{
-                height: 100%;
+                height: 50%;
+                max-height: 230px;
                 width: 100%;
+                border-radius: 2px;
+
+            }
+    
+
+            p{
+                margin: 15px auto;
+                font-size: 110%;
+                font-weight: 600;
+                text-align: center;
+            }
+
+            .links{
+                display: flex;
+                justify-content: space-evenly;
+                align-items: flex-end;
+                a{
+                    color: white;
+                    text-decoration: none;
+                }
             }
         }
 
@@ -45,10 +64,10 @@
 }
 
 
-@media (max-width: 1300px){
+// @media (max-width: 1300px){
 
  
-}
+// }
 
 @media (max-width: 400px){
     #proyects{
@@ -67,3 +86,4 @@
     }
 
 }
+
