--- a/src/Navbar/sass/onHover.scss
+++ b/src/Navbar/sass/onHover.scss
@@ -53,7 +53,7 @@
 
         }
         .btn-proyects::after{
-            content: "Proyects";
+            content: "Proyectos";
 
         }
 
@@ -62,7 +62,7 @@
 
         }
         .btn-contact::after{
-            content: "Contact";
+            content: "Contacto";
 
         }
 
