contact component ok

--- a/src/Navbar/sass/onHover.scss
+++ b/src/Navbar/sass/onHover.scss
@@ -1,4 +1,5 @@
 .navbar:hover{
+    background-color: rgba(26, 31, 38, 1);
     width: 8%;
     box-shadow: inset -2px 0 15px rgba(255,255,255, .1), -2px 0 15px rgba(255,255,255, .1);
 
