--- a/src/Contact/index.scss
+++ b/src/Contact/index.scss
@@ -2,76 +2,60 @@
 
 
 #contact{
-    background-color: map-get($colors, background);
-    border: 1px solid red;
-    form{
-        min-height: 500px;
-        width: 50%;
-        padding: 10px;
-        border: 1px solid yellow;
+    margin-top: auto;
+    padding: 15px 50px;
+    height: 30vh;
+    background: whitesmoke;
+    color: black;
+    font-weight: 500;
+    font-size: 2rem;
+    display: flex;
+    justify-content: space-between;
+    
+    a{
+        margin-left: 50px;
+        color: black;
+        font-weight: 500;
+        font-size: 1.7rem;
+    }
+    
+    .links{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .social-networks{
+        margin-right: 50px;
+        height: 237px;
+        width: 493px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        font-size: 2rem;
         
-        input{
-            height: 30px;
-            color: white;
-            border: none;
-            outline: none;
-            background-color: grey;
-        }
+        h2{
+            font-weight: 400;
 
-        input::placeholder{
-            color: white;
-            padding-bottom: 50px
         }
-
-        .first-line{
-            margin-right: auto;
-            width: 100%;
-            border: 1px solid blue;
+        .icons{
+            margin-top: 20px;
+            width: 50%;
             display: flex;
-            justify-content: space-between;
-            *{
-                width: 48%;
-            }
-        }
+            justify-content: space-around;
+            align-items: center;
 
-        .subject{
-            margin-right: auto;
-            width: 100%;
-            *{
-                width: 100%;
-            }
-        }
-
-
-        .message{
-            width: 100%;
-            margin: 8px auto 8px 0;
-
-            input{
-                width: 100%;
-                min-height: 200px;
+            img{
+                height: 100px;
+                width: 100px;
 
             }
+
         }
     }
 }
 
-@media (max-width: 450px){
-
-    .container{
-        form{
-            .first-line{
-                *{
-                    width: 100%;
-                    margin: 2px;
-                    margin: auto;
-                }
-            }
-        }
-    }        
-}
+// @media (max-width: 450px){
+  
+// }
