--- a/src/Home/index.scss
+++ b/src/Home/index.scss
@@ -32,6 +32,17 @@
             }
         }
 
+        .options{
+            width: 35%;
+            padding: 15px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            a{
+                font-size: 2.2rem;
+            }
+        }
+
        
 }
 
