--- a/src/Proyects/index.scss
+++ b/src/Proyects/index.scss
@@ -1,4 +1,5 @@
 @import "../sass/variables";
+@import "./media.scss";
 
 #proyects{
     // border: 1px solid green;
@@ -7,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     // align-items:flex-end;
-    // flex-wrap: wrap;
+    flex-wrap: wrap;
 
     .title{
         font-size: xx-large;
@@ -18,21 +19,24 @@
     }
 
     div.list{
+        outline: 1px solid red;
         height: 700px;
-        width: 1300px;
+        width: 90%;
         display: flex;
+        flex-wrap: wrap;
 
         div.proyect{
             margin: auto;
             height: 70%;
-            width: 28%;
+            width: 290px;
             border-radius: 2px;
             display: flex;
             flex-direction: column;           
 
             img{
                 height: 50%;
-                max-height: 230px;
+                min-height: 245px;
+                max-height: 300px;
                 width: 100%;
                 border-radius: 2px;
 
@@ -63,8 +67,38 @@
 
 
 // @media (max-width: 1300px){
+//     div.list{
+//         height: 600px !important;
+//         width: 80%;        
+//         .proyect{
+//             margin: 0 !important;
+//             height: 50% !important;
+//             width: 50% !important;
+//             img{
+//                 height: 300px !important;
+//             }
+//         }
+        
+//         p{
+//            display: none;
+//         }
 
+//         div.links{
+//             display: none !important;
+//         }
+    
+//     }
  
+
+//     .proyect:active{
+//         p{
+//             display: inherit !important;
+//         }
+
+//         div.links{
+//             display: inherit !important;
+//         }
+//     }
 // }
 
 @media (max-width: 400px){
