--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -17,7 +17,7 @@ button{
 
 .container{
     padding: 30px;
-    height: 100vh;
+    min-height: 100vh;
     width: 97%;
     color: map-get($colors, secondary );
     display: flex;
