--- a/src/Contact/index.scss
+++ b/src/Contact/index.scss
@@ -5,7 +5,7 @@
 #contact{
     margin-top: auto;
     padding: 15px 50px;
-    height: 30%;
+    min-height: 30vh;
     background: whitesmoke;
     color: black;
     font-weight: 500;
