--- a/src/Home/index.scss
+++ b/src/Home/index.scss
@@ -1,4 +1,5 @@
 @import "../sass/variables";
+@import "./media.scss";
 
 #home{
     display: flex;
@@ -6,7 +7,6 @@
     justify-content: space-evenly;
  
         .title{
-            // border:1px solid green;
             margin: auto 0;
             font-size: 2.9rem;
             text-transform: uppercase;
@@ -33,7 +33,7 @@
         }
 
         .options{
-            width: 35%;
+            width: 50%;
             padding: 15px;
             display: flex;
             justify-content: space-between;
