--- a/src/Navbar/sass/navbar.scss
+++ b/src/Navbar/sass/navbar.scss
@@ -1,10 +1,14 @@
 @import "../../sass/variables";
+
+
+
 .navbar {
     z-index: 500;
     width: 3%;
     height: 100vh;
     position: fixed;
     right: 0;
+    margin: auto;
     padding: 0;
     background-color: map-get($colors, sidebar );
     overflow: hidden;
@@ -34,9 +38,13 @@
 
 @media (max-width: 1300px){
     .navbar{
-        width: 100%;
+        background-color: orange;
+        width: 100% !important;
+        max-width: 100vw;
+        left: 0 !important;
         height: 7vh;
         padding: 10px;
+        left: 0;
         display: flex;
         align-items: center;
     }
