--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,10 +1,10 @@
 $colors : (
-    "background": /* 0F3D3E *//* 393E46 */ /* rgb(2, 2, 2) */ /* #222831 */ black,
-    "secondary-background": /* rgba(15, 45, 45, 1) *//* #222831 */ black,
+    "background": black,
+    "secondary-background": black,
     // "about": rgba(15, 61, 62, 1),
     "primary" : #DF7861,
-    "secondary" : #00ADB5/* #E2DCC8 *//* #5CB8E4 */,
-    "sidebar" : /* #222831 */ /* rgba(1,1,1, .9) */ rgba(26, 31, 38, .95) /* #101010 */,
+    "secondary" : #00ADB5,
+    "sidebar" :  rgba(26, 31, 38, .95) ,
 );
 
 $fonts : ();
