--- a/src/Navbar/sass/navbar.scss
+++ b/src/Navbar/sass/navbar.scss
@@ -2,39 +2,42 @@
 
 
 
-.navbar {
-    z-index: 500;
-    width: 3%;
-    height: 100vh;
-    position: fixed;
-    right: 0;
-    margin: auto;
-    padding: 0;
-    background-color: map-get($colors, sidebar );
-    overflow: hidden;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transition: .3s ease-in-out;
-
+@media (min-width: 1300px){
+    .navbar {
+        z-index: 500;
+        width: 3%;
+        height: 100vh;
+        position: fixed;
+        right: 0;
+        margin: auto;
+        padding: 0;
+        background-color: map-get($colors, sidebar );
+        overflow: hidden;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        transition: .3s ease-in-out;
     
-    .networks-container{
-        opacity: 0;
-        width: 100%;
-        height: 10%;
-        color: white !important;
-        transition: opacity .7s ease;
-        *{
-            width: 40%;
-            height: 40%;
-            margin-top: 20px;
-
+        
+        .networks-container{
+            opacity: 0;
+            width: 100%;
+            height: 10%;
+            color: white !important;
+            transition: opacity .7s ease;
+            *{
+                width: 40%;
+                height: 40%;
+                margin-top: 20px;
+    
+            }
+    
         }
-
     }
-}
+    
 
+}
 
 @media (max-width: 1300px){
     .navbar{
@@ -50,21 +53,5 @@
     }
     
   
-    // .navbar nav{
-    //     width: 100%;
-    //     height: 7vh;
-    //     text-align: center;
-    //     margin-left: auto;
-    //     padding: 15px;
-    //     background-color: map-get($colors, secondary );
-        
-    //     ul.nav-list{
-    //         display: flex;
-    //         justify-content: space-between;
-    //         .item{
-    //             display: inline;
-    //         }
-    //     }
-    // }
 }
 
