--- a/src/Proyects/index.scss
+++ b/src/Proyects/index.scss
@@ -2,12 +2,10 @@
 @import "./media.scss";
 
 #proyects{
-    // border: 1px solid green;
     background-color: map-get($colors , secondary-background );
     display: flex;
     flex-direction: column;
     justify-content: center;
-    // align-items:flex-end;
     flex-wrap: wrap;
 
     .title{
@@ -106,9 +104,9 @@
         flex-direction: column;
         justify-content: center;
         .proyect{
+            // margin-top: 20px !important;
             height: 33.333333vh;
             width: 100%;
-            border: 1px solid red;
             img{
                 height: 100%;
                 width: 100%;
